@@ -1,1 +1,1 @@
-Search.setIndex({objects:{"mnemosyne.libmnemosyne":{component:[6,0,1,""],render_chain:[4,0,1,""]},"mnemosyne.libmnemosyne.render_chain.RenderChain":{render_question:[4,1,1,""],component_type:[4,2,1,""],unregister_filter:[4,1,1,""],register_filter:[4,1,1,""],register_filter_at_front:[4,1,1,""],register_filter_at_back:[4,1,1,""],renderers:[4,2,1,""],filter:[4,1,1,""],filters:[4,2,1,""],renderer_for_card_type:[4,1,1,""],render_answer:[4,1,1,""],register_renderer:[4,1,1,""],id:[4,2,1,""],unregister_renderer:[4,1,1,""]},"mnemosyne.libmnemosyne.component":{Component:[6,3,1,""]},"mnemosyne.libmnemosyne.component.Component":{activate:[6,1,1,""],LATER:[6,2,1,""],plugins:[6,1,1,""],review_widget:[6,1,1,""],log:[6,1,1,""],render_chain:[6,1,1,""],deactivate:[6,1,1,""],flush_sync_server:[6,1,1,""],main_widget:[6,1,1,""],review_controller:[6,1,1,""],stopwatch:[6,1,1,""],start_review:[6,1,1,""],config:[6,1,1,""],card_type_with_id:[6,1,1,""],translator:[6,1,1,""],card_types:[6,1,1,""],scheduler:[6,1,1,""],component_type:[6,2,1,""],database:[6,1,1,""],instantiate:[6,2,1,""],controller:[6,1,1,""],used_for:[6,2,1,""],IMMEDIATELY:[6,2,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[4,3,1,""]}},terms:{represent:[2,4],all:[2,6],code:[2,6],frontend:2,chain:4,libmnemosyn:[2,6,4],text:[2,4],register_filter_at_back:4,rest:2,detail:[2,4],sync_serv:6,session:6,through:[2,4],in_front:4,flexibl:2,mnemosyn:[6,4],yet:6,absolut:2,onli:6,component_manag:[6,4],how:2,befor:[2,6,4],configur:[2,5],activ:[2,6],should:[6,4],add:[2,4],program:[2,6],swap:2,schedul:[2,6],stopwatch:[2,6],renderer_for_card_typ:4,logger:2,subsequ:6,determin:2,easier:2,sent:[2,4],render_arg:4,overwritten:6,deactiv:6,them:[2,6],liter:[0,1,3,4,5,6,7,8,9],point:2,string:4,thei:6,get:[2,4],handl:2,becaus:6,card_type_widget:6,mention:2,logupload:[2,7],renderer_class:4,"new":[2,4],front:4,span:[0,1,3,4,5,6,7,8,9],apart:6,recip:2,search:2,start_review:6,like:[2,4],specif:[2,4],level:2,docutil:[0,1,3,4,5,6,7,8,9],gui:2,anyth:6,list:[2,6,4],mechan:2,server:6,collect:2,statist:2,contain:[2,4],unregister_render:4,where:2,side:2,mean:[6,4],set:2,storag:2,renderchain:[2,4],back:4,"export":[2,4],pass:[2,6],close:6,happen:6,used_for:6,review_widget:6,out:2,index:2,shown:2,still:6,lazili:6,render_chain:[6,4],databas:[2,6],review:[2,6],particip:2,access:6,recognit:2,written:2,won:2,suitabl:[2,4],rel:[2,4],between:6,"import":4,content:2,method:6,refer:6,widget:6,after:4,run:4,deriv:[2,6],gener:2,each:[2,6],here:6,standard:2,reason:6,base:6,path:[2,4],becom:6,sinc:2,valu:2,wait:6,about:6,actual:[2,6],plugin:[9,6,4,2],could:6,register_filter_at_front:4,initialis:6,filter:[2,6,4],etc:2,integr:2,control:[2,6],context:6,constructor:6,fals:4,mani:[2,6,4],chang:[2,6],filter_class:4,backup:6,fileformat:[2,0],first:[2,4],oper:[2,4],overrid:6,own:6,effici:6,render:[2,6,4],extra:2,instanti:6,appli:2,vain:6,independ:2,number:2,two:2,hook:[2,6],alreadi:[6,4],done:6,reviewcontrol:2,shutdown:6,componentmanag:2,mobil:6,dangl:6,unit:2,manag:6,sever:2,flush_sync_serv:6,differ:2,doe:4,from:[2,6,4],log:6,wai:2,associ:2,question:[2,4],three:2,been:6,name:4,compon:[2,6],reli:6,call:[2,6],card:[2,6,4],lot:6,basic:2,overview:2,immedi:6,type:[2,6,4],card_type_with_id:6,store:6,more:[2,6],field:2,relationship:6,latex:2,relat:2,convert:2,sync:6,link:2,translat:[2,6],card_typ:[6,4],input:6,pronunci:2,tagtre:[2,3],repetit:2,hold:6,cach:6,those:6,"case":6,none:6,main:6,word:2,consist:2,restor:6,provid:6,work:[2,6],displai:[2,4],"abstract":[2,6],exampl:2,reus:6,instanc:[6,4],can:[2,6,4],statistics_pag:6,otherwis:6,modul:2,other:[2,6,4],browser:[2,4],pre:[0,1,3,4,5,6,7,8,9],layer:2,criterion_appli:6,file:[2,6,4],creat:6,process:2,certain:[2,6],dure:6,flush:6,toolkit:2,indic:2,cardtypeconvert:2,raw:[2,4],"default":[6,4],tag:2,right:[2,4],have:6,tabl:2,need:[2,6,4],take:6,render_answ:4,foreign:2,"__init__":6,assembl:[2,4],alwai:[2,6],form:[2,4],want:4,obsolet:6,perform:[2,4],make:[2,6],format:6,when:6,factview:2,same:2,write:2,also:2,complex:6,criterion:[2,6],main_widget:6,which:[2,6,4],regist:[6,4],answer:[2,4],instead:4,page:2,writer:[2,4],config:6,either:[2,4],therefor:6,generic_card_type_widget:6,sure:6,under:6,dialog:6,ui_compon:6,normal:2,component_typ:[6,4],"class":[0,1,3,4,5,6,7,8,9],logic:2,most:6,user:6,devic:6,veri:4,render_quest:4,data:[2,4],typic:[2,6],expand:[2,4],review_control:6,register_render:4,card_type_convert:6,unregister_filt:4,statisticspag:[8,2],later:6,order:[2,4],register_filt:4,inform:2,cardtyp:[2,1],client:6,thi:[2,6,4],time:[2,6,4],activitycriterion:2,criterionappli:2,fact:2},objtypes:{"0":"py:module","1":"py:method","2":"py:attribute","3":"py:class"},titles:["<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">CardType</span></tt>","Libmnemosyne overview","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Component</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","attribute","Python attribute"],"3":["py","class","Python class"]},filenames:["modules/file_format","modules/card_type","index","modules/tag_tree","modules/render_chain","modules/configuration","modules/component","modules/log_uploader","modules/statistics_page","modules/plugin"]})
+Search.setIndex({objects:{"mnemosyne.libmnemosyne":{component:[6,0,1,""],render_chain:[4,0,1,""]},"mnemosyne.libmnemosyne.render_chain.RenderChain":{render_question:[4,1,1,""],component_type:[4,2,1,""],unregister_filter:[4,1,1,""],register_filter:[4,1,1,""],register_filter_at_front:[4,1,1,""],register_filter_at_back:[4,1,1,""],renderers:[4,2,1,""],filter:[4,1,1,""],filters:[4,2,1,""],renderer_for_card_type:[4,1,1,""],render_answer:[4,1,1,""],register_renderer:[4,1,1,""],id:[4,2,1,""],unregister_renderer:[4,1,1,""]},"mnemosyne.libmnemosyne.component":{Component:[6,3,1,""]},"mnemosyne.libmnemosyne.component.Component":{activate:[6,1,1,""],LATER:[6,2,1,""],plugins:[6,1,1,""],review_widget:[6,1,1,""],log:[6,1,1,""],render_chain:[6,1,1,""],deactivate:[6,1,1,""],flush_sync_server:[6,1,1,""],main_widget:[6,1,1,""],review_controller:[6,1,1,""],stopwatch:[6,1,1,""],start_review:[6,1,1,""],config:[6,1,1,""],card_type_with_id:[6,1,1,""],translator:[6,1,1,""],card_types:[6,1,1,""],scheduler:[6,1,1,""],component_type:[6,2,1,""],database:[6,1,1,""],instantiate:[6,2,1,""],controller:[6,1,1,""],used_for:[6,2,1,""],IMMEDIATELY:[6,2,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[4,3,1,""]}},terms:{represent:[2,4],all:[2,6],code:[2,6],frontend:2,chain:4,from:[2,6,4],text:[2,4],main_widget:6,register_filter_at_back:4,rest:2,factview:2,sync_serv:6,session:6,through:[2,4],criterionappli:2,config:6,flexibl:2,mnemosyn:[6,4],yet:6,absolut:2,onli:6,"default":[6,4],how:2,configur:[2,5],activ:[2,6],complex:6,should:[6,4],about:6,add:[2,4],program:[2,6],swap:2,appli:2,stopwatch:[2,6],renderer_for_card_typ:4,logger:2,subsequ:6,easier:2,sent:[2,4],render_arg:4,overwritten:6,deactiv:6,them:[2,6],liter:[0,1,3,4,5,6,7,8,9],point:2,string:4,thei:6,get:[2,4],handl:2,constructor:6,becaus:6,card_type_widget:6,mention:2,logupload:[2,7],renderer_class:4,"import":4,front:4,dure:6,apart:6,recip:2,start_review:6,like:[2,4],specif:[2,4],level:2,docutil:[0,1,3,4,5,6,7,8,9],gui:2,anyth:6,list:[2,6,4],used_for:6,collect:2,statist:2,contain:[2,4],unregister_render:4,where:2,side:2,mean:[6,4],set:2,renderchain:[2,4],back:4,sure:6,"export":[2,4],mobil:6,pass:[2,6],close:6,happen:6,server:6,review_widget:6,out:2,index:2,shown:2,still:6,lazili:6,render_chain:[6,4],review_control:6,databas:[2,6],review:[2,6],particip:2,access:6,recognit:2,written:2,won:2,suitabl:[2,4],rel:[2,4],between:6,"new":[2,4],content:2,method:6,refer:6,widget:6,run:4,deriv:[2,6],gener:2,each:[2,6],here:6,standard:2,thi:[2,6,4],reason:6,base:6,path:[2,4],becom:6,sinc:2,valu:2,wait:6,convert:2,activitycriterion:2,actual:[2,6],plugin:[9,6,4,2],could:6,register_filter_at_front:4,initialis:6,filter:[2,6,4],etc:2,integr:2,context:6,logic:2,fals:4,mani:[2,6,4],chang:[2,6],browser:[2,4],backup:6,fileformat:[2,0],first:[2,4],oper:[2,4],pre:[0,1,3,4,5,6,7,8,9],client:6,own:6,effici:6,render:[2,6,4],extra:2,instanti:6,schedul:[2,6],vain:6,independ:2,number:2,three:2,order:[2,4],hook:[2,6],alreadi:[6,4],done:6,been:6,shutdown:6,componentmanag:2,storag:2,dangl:6,unit:2,manag:6,compon:[2,6],differ:2,restor:6,span:[0,1,3,4,5,6,7,8,9],log:6,wai:2,most:6,question:[2,4],two:2,reviewcontrol:2,name:4,flush_sync_serv:6,reli:6,call:[2,6],card:[2,6,4],lot:6,basic:2,overview:2,immedi:6,type:[2,6,4],card_type_with_id:6,store:6,more:[2,6],field:2,relationship:6,relat:2,search:2,sync:6,link:2,translat:[2,6],input:6,pronunci:2,tagtre:[2,3],repetit:2,hold:6,cach:6,those:6,"case":6,none:6,main:6,word:2,consist:2,component_manag:[6,4],provid:6,work:[2,6],displai:[2,4],can:[2,6,4],"__init__":6,reus:6,in_front:4,statistics_pag:6,otherwis:6,modul:2,other:[2,6,4],typic:[2,6],filter_class:4,overrid:6,layer:2,later:6,have:6,creat:6,process:2,certain:[2,6],"abstract":[2,6],flush:6,toolkit:2,indic:2,cardtypeconvert:2,raw:[2,4],control:[2,6],tag:2,right:[2,4],file:[2,6,4],tabl:2,need:[2,6,4],take:6,foreign:2,libmnemosyn:[2,6,4],assembl:[2,4],alwai:[2,6],form:[2,4],want:4,obsolet:6,perform:[2,4],make:[2,6],format:6,when:6,detail:[2,4],same:2,data:[2,4],write:2,also:2,instanc:[6,4],criterion:[2,6],sever:2,which:[2,6,4],regist:[6,4],answer:[2,4],instead:4,page:2,writer:[2,4],card_typ:[6,4],either:[2,4],therefor:6,generic_card_type_widget:6,render_answ:4,under:6,dialog:6,ui_compon:6,normal:2,component_typ:[6,4],after:4,befor:[2,6,4],user:6,devic:6,veri:4,render_quest:4,associ:2,"class":[0,1,3,4,5,6,7,8,9],expand:[2,4],latex:2,register_render:4,card_type_convert:6,unregister_filt:4,criterion_appli:6,doe:4,register_filt:4,inform:2,cardtyp:[2,1],exampl:2,determin:2,time:[2,6,4],mechan:2,statisticspag:[8,2],fact:2},objtypes:{"0":"py:module","1":"py:method","2":"py:attribute","3":"py:class"},titles:["<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">CardType</span></tt>","Libmnemosyne overview","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Component</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","attribute","Python attribute"],"3":["py","class","Python class"]},filenames:["modules/file_format","modules/card_type","index","modules/tag_tree","modules/render_chain","modules/configuration","modules/component","modules/log_uploader","modules/statistics_page","modules/plugin"]})
